--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -36,13 +36,13 @@
             </ul>
             <ul id="x-wiki-index" class="uk-nav uk-nav-side" style="margin-right:-15px;">
                 {%  for site in sites %}
-                  <div id="menu-{{ site.site_name }}" depth="0" style="position:relative;margin-left:15px;" class="uk-active" expand="true">
+                  <div id="menu-{{ site.site_name }}" depth="0" style="position:relative;margin-left:15px;" class="uk-active" expand="false">
                     {% ifnotequal site.site_name 'ORPHAN' %}
-                    <i onclick="toggleWikiNode(this)" class="uk-icon-minus-square-o" style="position:absolute;margin-left:-1em;padding-top:8px;"></i>
+                    <i onclick="toggleWikiNode(this)" class="uk-icon-plus-square-o" style="position:absolute;margin-left:-1em;padding-top:8px;"></i>
                     {% endifnotequal %}
                     <a href="#div-{{ site.site_name }}" class="x-wiki-index-item">{{site.site_name}}</a>
                     {%  for pf in site.pfs %}
-                        <div id="menu-{{ pf.pf_name }}" depth="1" style="position: relative; margin-left: 15px;">
+                        <div id="menu-{{ pf.pf_name }}" depth="1" style="display: none;position: relative; margin-left: 15px;">
                             <a href="#div-{{ site.site_name }}-{{ pf.pf_name }}" class="x-wiki-index-item">{{ pf.pf_name }}</a>
                         </div>
                     {% endfor %}
