2020-06-04     1. Add header for all pages.     2. Add current time/total pf display in backend page.     3. Fix bug that collecting crash if dm Node name != Host name.

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -98,7 +98,7 @@
         padding-left:15px;
         position:fixed;
         overflow:scroll;
-        top:0;
+        top:50px;
         left:200px;
         bottom:0;
         right:0;
