--- a/static/css/general.css
+++ b/static/css/general.css
@@ -200,5 +200,27 @@
         color: red;
     }
 
+    #user-tools {
+    float: right;
+    padding: 0;
+    margin: 0 0 0 20px;
+    font-weight: 300;
+    font-size: 11px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    text-align: right;
+    font-family: arial;
+    }
+
+    #user-tools a {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+    }
+
+    #user-tools a:focus, #user-tools a:hover {
+        text-decoration: none;
+        border-bottom-color: #79aec8;
+        color: #79aec8;
+    }
+
 
 
