--- a/templates/Backend2.html
+++ b/templates/Backend2.html
@@ -44,6 +44,7 @@
                         <th>Platform</th>
                         <th>Begin</th>
                         <th>End</th>
+                        <th>Used</th>
                         <th>State</th>
                         <th>Counter</th>
                     </tr>
@@ -55,6 +56,7 @@
                         <td class='itemvalue'>{{item.Current_platform.Platform}}</td>
                         <td class='itemvalue'>{{item.Begin|date:"Y-m-d H:i:s.u"}}</td>
                         <td class='itemvalue'>{{item.End|date:"Y-m-d H:i:s.u"}}</td>
+                        <td class="itemvalue">{{item.used}}</td>
                         <td class='itemvalue'>{{item.State}}</td>
                         <td class='itemvalue'>{{item.Counter}}</td>
                         </tr>
