--- a/templates/Display.html
+++ b/templates/Display.html
@@ -66,7 +66,12 @@
                 {% for d in room_info.ds %}
 
                 <div id='div-{{ d.n.Host_name }}' class="column_item">
-                    <div class="dm_host platform-node-name">{{ d.n.Node }} ({{ d.n.os }}) ({{ d.n.usr }})</div>
+                    <div class="dm_host platform-node-name">
+                        <div class="dm-host-name">{{ d.n.Node }}</div>
+                        <div class="dm-os">{{ d.n.os }}</div>
+                        <div class="dm-usr">{{ d.n.usr }}</div>
+                        <div class="clear_float"></div>
+                    </div>
                     <div>
                         <label>Expected timeout:</label>
                         <input type="text" class="timeout_value" style="width: 60px" value="180" onblur="onblurTimout(this)">
