2020-07-09~2020-08-11 1. Add display mine/all functions for platform/display pages. 2. Fix bugs on backend2 page. 3. Modify the update frequency to get user list from tai2. 4. Add passwd change function. 5. etc.

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -249,5 +249,27 @@
         color: #79aec8;
     }
 
-
+    .display_mine_all {
+        margin:10px;
+        border:solid 1px #227449;
+        border-radius: 4px;
+        padding: 1px;
+        background: #3decbf;
+        width: 100px;
+        height: 20px;
+        color: #301d14;
+        font-style: italic;
+        left: 10px;
+        /*font-weight: bold;*/
+    }
+    .note {
+        padding: 4px;
+        /*border: dashed 1px grey;
+        border-radius: 4px;*/
+        color: #2318ff;
+        left: 0;
+        right:0;
+        /*background: #d5d5d5;*/
+        background: #ffff00;
+    }
 
