--- a/templates/header.html
+++ b/templates/header.html
@@ -18,6 +18,7 @@
                 <span id="user-tools" class="uk-navbar-brand uk-hidden-small">
                     Welcome,
                     <strong id="current-login-user">{% firstof user.get_short_name user.get_username %}</strong> /
+                    <a href="/passwd/" style="color: white;"><span class="x-icon"></span>MOD PASSWD</a> /
                     <a href="/logout/" style="color: white;"><span class="x-icon"></span>LOG OUT</a>
                 </span>
             </div>
