--- a/templates/passwd.html
+++ b/templates/passwd.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
     <head>
         <meta charset="utf-8">
-        <!--meta http-equiv="X-UA-Compatible" content="IE=edge"-->
-        <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
         <!--link rel="icon" href="http://v3.bootcss.com/favicon.ico"-->
- 
+
         <title>Platform Mapping</title>
         <!-- Bootstrap core CSS -->
         <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -20,28 +20,32 @@
             }
         </style>
     </head>
- 
+
     <body>
- 
+
         <div class="container">
 
-            <!--form class="form-signin" method="POST" onsubmit="return validate_login()"-->
-            <form class="form-signin" method="POST">
+            <form class="form-signin" method="POST" onsubmit="return validate_reg()">
                 {% csrf_token %}
-                <h2 class="form-signin-heading">Please sign in</h2>
-                <div class="line">
-                    <label for="username" class="sr-only">UserName</label>
-                    <input type="text" id="username" class="form-control" name="username" placeholder="UserName" required autofocus>
-                </div>
+                <h3 class="form-signin-heading">Change password: {% firstof user.get_short_name user.get_username %}</h3>
                 <div class="line">
                     <label for="password" class="sr-only">Password</label>
                     <input type="password" id="password" class="form-control" name="password" placeholder="Password" required>
                 </div>
- 
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <!--div class="line">
+                    <label for="inputPassword2" class="sr-only">Password again</label>
+                    <input type="password" id="inputPassword2" class="form-control" name="password2" placeholder="Password again" required>
+                </div-->
                 <div class="line">
-                        <a class="form-signin-heading" href="/reg/">Register</a>
+                    <label for="mobile" class="sr-only">Mobile</label>
+                    <input type="number" id="mobile" class="form-control" name="mobile" placeholder="Mobile" required>
                 </div>
+                <div class="line">
+                    <label for="email" class="sr-only">Email</label>
+                    <input type="text" id="email" class="form-control" name="email" placeholder="Email" required>
+                </div>
+
+                <button class="btn btn-lg btn-primary btn-block" type="submit">change</button>
             </form>
 
 
