2020-11-16 1. Add Xorg version info. Use X-ver to check availability of tty. 2. Fix log info in restart/tty change. 3. Keep csci num if not 001. 4. Fix problem of exception when parse_output(sock.recv) time out. 5. Add prompt info if local change in Platform page. 6. Merge 'display all' and 'display mine' to one button.

--- a/templates/Display.html
+++ b/templates/Display.html
@@ -39,8 +39,7 @@
             </ul>
             <ul>
                 <div>
-                    <button class="display_mine_all" id="display_mine"  onclick="onclick_display_mine_btn(true)">Display mine</button>
-                    <button class="display_mine_all" id="display_all"  onclick="onclick_display_mine_btn(false)">Display all</button>
+                    <button class="display_mine_all" id="display_mine"  onclick="onclick_display_mine_btn()">Display mine</button>
                 </div>
             </ul>
             <ul>
